# otus-2-lambdas

./: .gitignore  .travis.yml  CMakeLists.txt  test_version_boost.cpp
